// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcDropdown multiple value #slots should forward CTA slot 1`] = `
<li
  class="ec-dropdown-search__cta-area"
  data-test="ec-dropdown-search__cta-area"
>
  <button>
    My CTA
  </button>
</li>
`;

exports[`EcDropdown multiple value #slots should forward item slot 1`] = `
<ul
  class="ec-dropdown-search__item-list"
>
  <!---->
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
    title="Item 1"
  >
    <div>
      (0) Item 1 - true
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
    title="Item 2"
  >
    <div>
      (1) Item 2 - false
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
    title="Item 3"
  >
    <div>
      (2) Item 3 - true
    </div>
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled ec-has-tooltip"
    data-original-title="Item 4"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
  >
    <div>
      (3) Item 4 - false
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
    title="Item 5"
  >
    <div>
      (4) Item 5 - false
    </div>
  </li>
</ul>
`;

exports[`EcDropdown multiple value :props should enable search when isSearchEnabled is set to true 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Search..."
  />
</li>
`;

exports[`EcDropdown multiple value :props should get disabled when disabled prop is set 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    data-test="ec-popover-dropdown-search"
    disabled="disabled"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input ec-input-field__input"
        disabled="disabled"
        id="ec-input-field-278"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--is-disabled"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown multiple value :props should not show the items when the loading is set to true 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    data-test="ec-popover-dropdown-search"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input ec-input-field__input"
        id="ec-input-field-284"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
        <li>
          <div
            class="ec-loading"
          >
            <div
              class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
            >
              <svg
                class="ec-loading__icon ec-icon"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-simple-loading"
                />
              </svg>
            </div>
             
            <div
              class="ec-loading__content ec-loading__content--is-transparent"
            >
              <div
                class="ec-dropdown-search__loading"
                data-test="ec-dropdown-search__loading"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown multiple value :props should pass errorMessage prop to the triggering input 1`] = `undefined`;

exports[`EcDropdown multiple value :props should pass label prop to the triggering input 1`] = `
<label
  class="ec-input-field__label"
  data-test="ec-input-field__label"
  for="ec-input-field-240"
>
  <span
    class="ec-input-field__label-text"
    data-test="ec-input-field__label-text"
  >
    Random label
  </span>
   
  <!---->
</label>
`;

exports[`EcDropdown multiple value :props should use placeholder prop 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input ec-input-field__input"
  id="ec-input-field-265"
  placeholder="Random placeholder"
  readonly="readonly"
  type="text"
/>
`;

exports[`EcDropdown multiple value :props should use searchPlaceholder prop if search is enabled 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Random search placeholder"
  />
</li>
`;

exports[`EcDropdown multiple value should render as expected 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    data-test="ec-popover-dropdown-search"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input ec-input-field__input"
        id="ec-input-field-178"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown multiple value should render checkbox for each item 1`] = `
<ul
  class="ec-dropdown-search__item-list"
>
  <!---->
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
    title="Item 1"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-198"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-198"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 1
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
    title="Item 2"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-199"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-199"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 2
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
    title="Item 3"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-200"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-200"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 3
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled ec-has-tooltip"
    data-original-title="Item 4"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        disabled="disabled"
        id="ec-checkbox-201"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--disabled"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-201"
        >
          <div
            class="ec-dropdown__multiple-item-label ec-dropdown__multiple-item-label--is-disabled"
          >
            Item 4
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
    title="Item 5"
  >
    <div
      class="ec-checkbox ec-dropdown__multiple-item"
    >
      <input
        class="ec-checkbox__input"
        id="ec-checkbox-202"
        type="checkbox"
      />
       
      <div
        class="ec-checkbox__label-checkbox-wrapper "
      >
        <span
          class="ec-checkbox__check-icon-wrapper"
        >
          <!---->
        </span>
         
        <label
          class="ec-checkbox__label"
          for="ec-checkbox-202"
        >
          <div
            class="ec-dropdown__multiple-item-label"
          >
            Item 5
          </div>
        </label>
      </div>
       
      <!---->
    </div>
  </li>
</ul>
`;

exports[`EcDropdown multiple value should render preselected checkbox for each selected item 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -18,11 +18,11 @@
        <!---->
         
        <input
          class=\\"ec-input-field__input ec-input-field__input--has-icon\\"
          data-test=\\"ec-dropdown__input ec-input-field__input\\"
-         id=\\"ec-input-field-207\\"
+         id=\\"ec-input-field-218\\"
          placeholder=\\"\\"
          readonly=\\"readonly\\"
          type=\\"text\\"
        />
         
@@ -60,26 +60,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-209\\"
+               id=\\"ec-checkbox-220\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
                >
-                 <!---->
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
+                 >
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-209\\"
+                 for=\\"ec-checkbox-220\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 1
@@ -98,26 +106,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-210\\"
+               id=\\"ec-checkbox-222\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
                >
-                 <!---->
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
+                 >
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-210\\"
+                 for=\\"ec-checkbox-222\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 2
@@ -136,26 +152,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-211\\"
+               id=\\"ec-checkbox-224\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
                >
-                 <!---->
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
+                 >
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-211\\"
+                 for=\\"ec-checkbox-224\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 3
@@ -175,26 +199,34 @@
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
                disabled=\\"disabled\\"
-               id=\\"ec-checkbox-212\\"
+               id=\\"ec-checkbox-226\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--disabled\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked ec-checkbox__check-icon-wrapper--disabled ec-checkbox__check-icon-wrapper--checked-and-disabled\\"
+               >
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
                  >
-                 <!---->
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-212\\"
+                 for=\\"ec-checkbox-226\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label ec-dropdown__multiple-item-label--is-disabled\\"
                  >
                    Item 4
@@ -213,26 +245,34 @@
            <div
              class=\\"ec-checkbox ec-dropdown__multiple-item\\"
            >
              <input
                class=\\"ec-checkbox__input\\"
-               id=\\"ec-checkbox-213\\"
+               id=\\"ec-checkbox-228\\"
                type=\\"checkbox\\"
              />
               
              <div
                class=\\"ec-checkbox__label-checkbox-wrapper \\"
              >
                <span
-                 class=\\"ec-checkbox__check-icon-wrapper\\"
+                 class=\\"ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked\\"
+               >
+                 <svg
+                   class=\\"ec-checkbox__check-icon ec-icon\\"
+                   height=\\"16\\"
+                   width=\\"16\\"
                  >
-                 <!---->
+                   <use
+                     xlink:href=\\"#ec-simple-check\\"
+                   />
+                 </svg>
                </span>
                 
                <label
                  class=\\"ec-checkbox__label\\"
-                 for=\\"ec-checkbox-213\\"
+                 for=\\"ec-checkbox-228\\"
                >
                  <div
                    class=\\"ec-dropdown__multiple-item-label\\"
                  >
                    Item 5"
`;

exports[`EcDropdown multiple value should render readonly input as a trigger 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input ec-input-field__input"
  id="ec-input-field-184"
  placeholder=""
  readonly="readonly"
  type="text"
/>
`;

exports[`EcDropdown single value #slots should forward CTA slot 1`] = `
<li
  class="ec-dropdown-search__cta-area"
  data-test="ec-dropdown-search__cta-area"
>
  <button>
    My CTA
  </button>
</li>
`;

exports[`EcDropdown single value #slots should forward item slot 1`] = `
<ul
  class="ec-dropdown-search__item-list"
>
  <!---->
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
    title="Item 1"
  >
    <div>
      (0) Item 1 - false
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
    title="Item 2"
  >
    <div>
      (1) Item 2 - false
    </div>
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
    title="Item 3"
  >
    <div>
      (2) Item 3 - true
    </div>
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled ec-has-tooltip"
    data-original-title="Item 4"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
  >
    <div>
      (3) Item 4 - false
    </div>
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
    title="Item 5"
  >
    <div>
      (4) Item 5 - false
    </div>
  </li>
</ul>
`;

exports[`EcDropdown single value :props should enable search when isSearchEnabled is set to true 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Search..."
  />
</li>
`;

exports[`EcDropdown single value :props should get disabled when disabled prop is set 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    data-test="ec-popover-dropdown-search"
    disabled="disabled"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input ec-input-field__input"
        disabled="disabled"
        id="ec-input-field-108"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--is-disabled"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown single value :props should not show the items when the loading is set to true 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    data-test="ec-popover-dropdown-search"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input ec-input-field__input"
        id="ec-input-field-114"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
        <li>
          <div
            class="ec-loading"
          >
            <div
              class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
            >
              <svg
                class="ec-loading__icon ec-icon"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-simple-loading"
                />
              </svg>
            </div>
             
            <div
              class="ec-loading__content ec-loading__content--is-transparent"
            >
              <div
                class="ec-dropdown-search__loading"
                data-test="ec-dropdown-search__loading"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown single value :props should pass errorMessage prop to the triggering input 1`] = `undefined`;

exports[`EcDropdown single value :props should pass label prop to the triggering input 1`] = `
<label
  class="ec-input-field__label"
  data-test="ec-input-field__label"
  for="ec-input-field-70"
>
  <span
    class="ec-input-field__label-text"
    data-test="ec-input-field__label-text"
  >
    Random label
  </span>
   
  <!---->
</label>
`;

exports[`EcDropdown single value :props should use placeholder prop 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input ec-input-field__input"
  id="ec-input-field-95"
  placeholder="Random placeholder"
  readonly="readonly"
  type="text"
/>
`;

exports[`EcDropdown single value :props should use searchPlaceholder prop if search is enabled 1`] = `
<li
  class="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Random search placeholder"
  />
</li>
`;

exports[`EcDropdown single value should render as expected 1`] = `
<div
  class="ec-dropdown-search ec-dropdown"
  data-test="ec-dropdown"
>
  <div
    class="ec-dropdown-search__trigger"
    data-popover-stub=""
    data-test="ec-popover-dropdown-search"
    offset="8"
    placement="bottom"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--has-icon"
        data-test="ec-dropdown__input ec-input-field__input"
        id="ec-input-field-4"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <!---->
         
        <!---->
         
      </ul>
    </div>
  </div>
</div>
`;

exports[`EcDropdown single value should render readonly input as a trigger 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--has-icon"
  data-test="ec-dropdown__input ec-input-field__input"
  id="ec-input-field-10"
  placeholder=""
  readonly="readonly"
  type="text"
/>
`;
